--- a/01.md
+++ b/01.md
@@ -26,3 +26,22 @@ react-native-cli를 사용했을때 얻을 수 잇는 native 접근권한을 얻
 
 ignite는 우리가 해야하는 설정들을 모두 대신 해주는대신 create react native app은 이러한 설정들은 해주지 않는다
 react native 어플을 만들어주고 ios, 안드로이드 폴더에 접근 가능하게 해준다
+
+#### Typescript 적용
+
+TypeScript가 React Native에서는 ReactJS처럼 똑같이 작동하지는 않는다
+코드가 TypeScript에 의해 컴파일되는게 아니라, 코드는 자바스크립트가 컴파일하고 TypeScript는 도와줄 뿐이기 때문이다
+TypeScript는 그저 타입을 체크하는 목적으로만 쓰이고 변환은 babel에 의해 컴파일될 것이다
+
+그래서 기존의 js파일을 tsx파일로 변환해서 error표시가 나오고 잇긴하지만 애뮬레이터에서는 문제없이 잘 작동된다
+때때로 nodeJS나 ReactJS에서 TypeScript로 작업할 때에는 TypeScript가 컴파일하기 때문에 에러가 발생하면 TypeScript가 컴파일하지 못해서 작동이 안됐지만 React Native는 TypeScript는 그냥 도와주는 역할이기 때문에 에러를 무시해도 어플은 무사히 실행될 것이다
+
+styled-components또한 TypeScript을 도입하면 styled.View부분에서 자동완성이 지원된다
+
+> React Navigation
+
+React Navigation은 이미 가져올 수 있는 많은 Types을 제공한다
+useNavigation을 사용할 때 이러한 types들 중 일부를 import해와야 한다
+
+NativeStackScreenProps 은 Native Stack Navigator에서 온 스크린에게 전달한다
+그래서 만약에 Movies 컴포넌트를 Type지정해주려면 NativeStackScreenProps을 import해야와 한다
